[package]
name = "Node_Routing_Service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
config = "0.15.11"
hyper = "1.6.0"
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt","env-filter"] }
